Added login page

--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -32,10 +32,16 @@
     max-width: 1400px;
 }
 
-.container-xs {
+.container-s {
     margin: 0 auto;
     padding: 0 15px;
     max-width: 1250px;
+}
+
+.container-xs {
+    margin: 0 auto;
+    padding: 0 15px;
+    max-width: 900px;
 }
 
 //.main {
