--- a/frontend/src/scss/components/_footer.scss
+++ b/frontend/src/scss/components/_footer.scss
@@ -1,12 +1,10 @@
 .footer {
-  position: absolute;
-  bottom: 0;
-  right: 0;
   width: 100%;
+  margin-top: 100px;
   padding-bottom: 20px;
 
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   flex-direction: column;
 
