added dispatches for login and register team, also added user dropdown menu with logout

--- a/frontend/src/scss/components/_header.scss
+++ b/frontend/src/scss/components/_header.scss
@@ -60,4 +60,12 @@
       padding-right: 30px;
     }
   }
+
+  &__dropdown {
+    cursor: pointer;
+
+    &-user {
+      font-size: 18px;
+    }
+  }
 }
