Started create new page for admin profile

--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -12,6 +12,7 @@
 .wrapper {
     min-height: 100vh;
     position: relative;
+    background: #ecf3f3;
 }
 
 .container {
@@ -23,7 +24,7 @@
 .container-lg {
   margin: 0 auto;
   padding: 0 15px;
-  max-width: 1700px;
+  max-width: 1600px;
 }
 
 .container-sm {
