--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -15,6 +15,17 @@
     background: #ecf3f3;
 }
 
+.Backdrop {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(0.5px);
+}
+
 .container {
     margin: 0 auto;
     padding: 0 15px;
