Added page "Practice" for users

--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -56,6 +56,13 @@
     max-width: 900px;
 }
 
+.container-practice {
+    margin: 0 auto;
+    padding: 0 15px;
+    max-width: 1150px;
+}
+
+
 //.main {
 //    background: #e5e5e5;
 //    min-height: 500px;
