--- a/frontend/src/scss/components/_challengeCard.scss
+++ b/frontend/src/scss/components/_challengeCard.scss
@@ -9,6 +9,7 @@
   margin-bottom: 30px;
 
   &__top {
+    position: relative;
     display: flex;
     justify-content: space-between;
 
@@ -18,6 +19,21 @@
       font-weight: 400;
       letter-spacing: 0.6px;
     }
+  }
+
+  &__solved {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    text-align: right;
+    color: #028529 !important;
+  }
+
+  &__checkmark {
+    padding-right: 5px;
   }
 
   &__middle {
