Created ScoreBoard page with ScoreBoard Table

--- a/frontend/src/scss/components/_table.scss
+++ b/frontend/src/scss/components/_table.scss
@@ -14,7 +14,7 @@
   }
 
   table, th, td {
-    border-bottom: 1px solid #acc6d9;
+    border-bottom: 1px solid #bdd0de;
     border-right: none;
     border-radius: 10px;
     border-collapse: collapse;
@@ -22,12 +22,18 @@
     margin: 0;
 
     &:first-child {
-      border-left: 1px solid #acc6d9;
-      border-top: 1px solid #acc6d9;
+      border-left: 1px solid #bdd0de;
+      border-top: 1px solid #bdd0de;
     }
 
     &:last-child {
-      border-right: 1px solid #acc6d9;
+      border-right: 1px solid #bdd0de;
+    }
+  }
+
+  &__scoreboard {
+    td {
+      padding: 25px 0;
     }
   }
 
