Create Competition Model, page with competition history, and some changes in other components

--- a/frontend/src/scss/components/_competitionCard.scss
+++ b/frontend/src/scss/components/_competitionCard.scss
@@ -1,6 +1,6 @@
 @import "../variables";
 
-.competition {
+.competition-card {
   width: 260px;
   background: $white;
   padding: 22px 10px 90px 10px;
