--- a/frontend/src/scss/components/_competition.scss
+++ b/frontend/src/scss/components/_competition.scss
@@ -14,7 +14,7 @@
   }
 
   &__title {
-    margin-top: 25px;
+    padding-top: 25px;
     display: flex;
     flex-direction: column;
 
@@ -27,13 +27,59 @@
     }
 
     &-input {
-      max-width: 400px;
+      width: 400px;
       box-shadow: 0 0 0 30px #ffffff inset !important;
       border: 1px solid #14387940;
       padding: 15px 15px;
       border-radius: 8px;
       font-size: 15px;
       letter-spacing: 1px;
+    }
+  }
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  &__btn {
+    padding: 15px 25px;
+    color: $white;
+    border: none;
+    letter-spacing: 0.6px;
+    font-weight: 600;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 8px;
+
+    &-new {
+      background: #2FA158;
+      margin-right: 25px;
+    }
+
+    &-start {
+      background: #00A3FF;
+    }
+
+    &-end {
+      background: #FF003D;
+    }
+  }
+
+  &__challenges {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 45px;
+    grid-row-gap: 0;
+
+    &-error {
+      margin-top: 30px;
+      width: 500px;
+      letter-spacing: 1.5px;
+      font-size: 17px;
+      color: #354675;
     }
   }
 }
