--- a/frontend/src/scss/components/_modal.scss
+++ b/frontend/src/scss/components/_modal.scss
@@ -22,6 +22,10 @@
     top: 25%;
   }
 
+  &__want-to-start {
+    top: 30%;
+  }
+
   &__header {
     padding: 16px 0;
     display: flex;
@@ -57,6 +61,11 @@
     &-alert {
       max-width: 400px;
     }
+
+    &-password {
+      max-width: 650px;
+      padding-bottom: 0;
+    }
   }
 
   &__row-block {
@@ -77,6 +86,16 @@
       color: #030229;
       padding-bottom: 8px;
       padding-left: 7px;
+    }
+
+    &-password {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      input {
+        width: 250px;
+      }
     }
 
     &-row {
@@ -111,6 +130,20 @@
     border-radius: 8px;
     font-size: 15px;
     letter-spacing: 1px;
+
+    &-password {
+      text-align: center;
+      letter-spacing: 8px;
+    }
+  }
+
+  &__set-password {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.6px;
+    color: #5969F6;
+    margin-bottom: 20px;
   }
 
   &__textarea {
@@ -323,6 +356,18 @@
     margin-left: 20px;
     cursor: pointer;
     border-radius: 10px;
+  }
+
+  &__start {
+    border: none;
+    padding: 10px 30px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #fff;
+    background: #2FA158;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-bottom: 40px;
   }
 }
 
