--- a/frontend/src/scss/components/_modal.scss
+++ b/frontend/src/scss/components/_modal.scss
@@ -126,7 +126,7 @@
     width: 100%;
     box-shadow: 0 0 0 30px #ffffff inset !important;
     border: 1px solid #14387940;
-    padding: 15px 15px;
+    padding: 15px;
     border-radius: 8px;
     font-size: 15px;
     letter-spacing: 1px;
@@ -134,6 +134,10 @@
     &-password {
       text-align: center;
       letter-spacing: 8px;
+    }
+
+    @media (max-width: 1500px) {
+      padding: 10px;
     }
   }
 
@@ -149,23 +153,32 @@
   &__textarea {
     width: 100%;
     border: 1px solid #6E7491;
-    padding: 15px 15px;
+    padding: 15px;
     border-radius: 8px;
     font-size: 15px;
     letter-spacing: 1px;
     height: 150px;
     resize: none;
+
+    @media (max-width: 1500px) {
+      height: 70px;
+      padding: 10px;
+    }
   }
 
   &__select {
     width: 100%;
     background: #fff;
     border: 1px solid #14387940;
-    padding: 15px 15px;
+    padding: 15px;
     border-radius: 8px;
     font-size: 15px;
     letter-spacing: 1px;
     cursor: pointer;
+
+    @media (max-width: 1500px) {
+      padding: 10px;
+    }
   }
 
   &__link:hover {
