added Banner Schema, routes, actions and slice for it. Also fixed some bugs in usersTable, challengeCard, and modal window.

--- a/frontend/src/scss/components/_all.scss
+++ b/frontend/src/scss/components/_all.scss
@@ -14,3 +14,5 @@
 @import "./competitionCard";
 @import "./competition";
 @import "./enterCompetition";
+@import "./adminBanners";
+@import "./home";
