--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -62,6 +62,18 @@
     max-width: 1150px;
 }
 
+.custom-file-upload {
+    width: 200px !important;
+    border: 1px solid #969696;
+    cursor: pointer;
+    padding: 6px 0;
+    text-align: center;
+}
+
+.custom-file-input {
+    display: none;
+}
+
 
 //.main {
 //    background: #e5e5e5;
